--- a/public/index.html
+++ b/public/index.html
@@ -13,9 +13,10 @@
 <body>
   <nav class="navbar">
     <ul class="navbar-nav">
+      <!--logo-->
       <li class="logo">
-        <a href="#" class="nav-link">
-          <span class="link-text logo-text">Fireship</span>
+        <a href="https://github.com/andrealvescorreia" class="nav-link">
+          <span class="link-text logo-text">andrealves</span>
           <svg
             aria-hidden="true"
             focusable="false"
@@ -42,8 +43,9 @@
         </a>
       </li>
 
+      <!--gatinho-->
       <li class="nav-item">
-        <a href="#" class="nav-link">
+        <a href="https://www.youtube.com/watch?v=J---aiyznGQ" class="nav-link" target="_blank">
           <svg
             aria-hidden="true"
             focusable="false"
@@ -67,10 +69,11 @@
               ></path>
             </g>
           </svg>
-          <span class="link-text">Cats</span>
+          <span class="link-text">Gatinhos</span>
         </a>
       </li>
 
+      <!--alien-->
       <li class="nav-item">
         <a href="#" class="nav-link">
           <svg
@@ -100,6 +103,7 @@
         </a>
       </li>
 
+      <!--espaço-->
       <li class="nav-item">
         <a href="#" class="nav-link">
           <svg
@@ -125,10 +129,11 @@
               ></path>
             </g>
           </svg>
-          <span class="link-text">Space</span>
+          <span class="link-text">Espaço</span>
         </a>
       </li>
 
+      <!--nave-->
       <li class="nav-item">
         <a href="#" class="nav-link">
           <svg
@@ -154,12 +159,14 @@
               ></path>
             </g>
           </svg>
-          <span class="link-text">Shuttle</span>
+          <span class="link-text">Nave</span>
         </a>
       </li>
 
+      <!--tema-->
       <li class="nav-item" id="themeButton">
         <a href="#" class="nav-link">
+            <!--lua-->
           <svg
             class="theme-icon"
             id="lightIcon"
@@ -185,6 +192,8 @@
               ></path>
             </g>
           </svg>
+
+          <!--sol-->
           <svg
             class="theme-icon"
             id="darkIcon"
@@ -211,7 +220,7 @@
             </g>
           </svg>
          
-          <span class="link-text">Themify</span>
+          <span class="link-text">Tematizar</span>
         </a>
       </li>
     </ul>
