trying out web components

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,9 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script defer src="theme.js"></script>
+  <script src="svg/cat.js"></script>
+  <script src="svg/moon.js"></script>
+  <script src="svg/sun.js"></script>
   <title>Responsive Navbar</title>
   <link rel="stylesheet" href="style.css" />
   <link
@@ -24,7 +27,7 @@
       <!--gatinho-->
       <li class="nav-item">
         <a href="https://www.youtube.com/watch?v=J---aiyznGQ" class="nav-link" target="_blank">
-          <script src="svg/cat.js"></script>
+          <cat-svg></cat-svg>
           <span class="link-text">Gatinhos</span>
         </a>
       </li>
@@ -57,10 +60,10 @@
       <li class="nav-item" id="themeButton">
         <a href="#" class="nav-link">
           <!--lua-->
-          <script src="svg/moon.js"></script>
+          <moon-svg></moon-svg>
 
           <!--sol-->
-          <script src="svg/sun.js"></script>
+          <sun-svg></sun-svg>
          
           <span class="link-text">Tematizar</span>
         </a>
